# ccmigrate

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: RESEARCH.md
src/ccmigrate/: archive.py  cli.py  dump.py  exporters.py  filters.py  handoff.py  models.py  redaction.py  util.py
src/ccmigrate/adapters/: __init__.py  base.py  claude.py  codex.py  opencode.py
tests/: test_adapters.py
